# Tftp

./: .gitignore  .gitmodules  CMakeLists.txt  README.ad  README.adoc  connection.cpp  connection.h  detector.cpp  detector.h  detector.puml  discover_thread.cpp  discover_thread.h  fibers.puml  file.h  helper.h  host_port.cpp  host_port.h  main.cpp  receiver.cpp  receiver.h  resource.h  scheduler.h  send_dialog.cpp  send_dialog.h  sequence.puml  server.cpp  server.puml  service.cpp  service.h  socket.h  swimm.puml  tftp.rc  waitable_list.cpp  waitable_list.h  writer.cpp  writer.h
cmake/Modules/: CsoiDoc.cmake  CsoiTEX.cmake  CsoiWin.cmake
